--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
+    "expo-cli": "^5.3.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-media-library": "~14.0.0",
+    "expo-location": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
